--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+<script src="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <script src="leaflet.ajax.min.js"></script>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/topojson.v0.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/topojson.v0.min.js"></script>
 <link rel="stylesheet" type="text/css" href="flaticon.css"> 
 
 <link rel="stylesheet" href="d3.slider.css" />
