--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-<script src="leaflet.ajax.min.js"></script>
+<script src="https://raw.githubusercontent.com/cadrev/sfmap/master/leaflet.ajax.min.js"></script>
 
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
 <link rel="stylesheet" type="text/css" href="flaticon.css"> 
 
-<link rel="stylesheet" href="d3.slider.css" />
-<script src="d3.slider.js"></script>
+
 
 <!-- Mustache -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
-
 
 
 <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
@@ -30,7 +28,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
-<script src="L.D3SvgOverlay.min.js"></script>
+<script src="https://raw.githubusercontent.com/cadrev/sfmap/master/L.D3SvgOverlay.min.js"></script>
 
 
 <style type="text/css">
