--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
-<script src="https://raw.githubusercontent.com/cadrev/sfmap/master/L.D3SvgOverlay.min.js"></script>
+<script src="https://cadrev.github.io/sfmap/L.D3SvgOverlay.min.js"></script>
 
 
 <style type="text/css">
