--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <!-- <script src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script> -->
 <script src="https://cadrev.github.io/sfmap/js/jquery.min.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+<link rel="stylesheet" href="https://cadrev.github.io/sfmap/css/leaflet.css" />
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-<script src="https://raw.githubusercontent.com/cadrev/sfmap/master/leaflet.ajax.min.js"></script>
+<script src="https://cadrev.github.io/sfmap/js/leaflet.js"></script>
+<script src="https://cadrev.github.io/sfmap/leaflet.ajax.min.js"></script>
 
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
@@ -19,7 +19,7 @@
 
 
 <!-- Mustache -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
+<script src="https://cadrev.github.io/sfmap/js/mustache.min.js"></script>
 
 
 <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
@@ -28,7 +28,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
-<script src="https://cadrev.github.io/sfmap/L.D3SvgOverlay.min.js"></script>
+<script src="https://cadrev.github.io/sfmap/js/L.D3SvgOverlay.min.js"></script>
 
 
 <style type="text/css">
