--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://cadrev.github.io/sfmap/css/leaflet.css" />
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="https://cadrev.github.io/sfmap/js/leaflet.js"></script>
-<script src="https://cadrev.github.io/sfmap/leaflet.ajax.min.js"></script>
+<script src="https://cadrev.github.io/sfmap/js/leaflet.ajax.min.js"></script>
 
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
