--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
-<link rel="stylesheet" type="text/css" href="flaticon.css"> 
+<link rel="stylesheet" type="text/css" href="https://cadrev.github.io/sfmap/css/flaticon.css"> 
 
 
 
