--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@ function checkAddress(checkbox)
         if (globalSelect == null){
         	console.log('no input');
         	UncheckAll()
-        } else {tall
+        } else {
           
   
         	renderContour(globalSelect.split('_')[0]+'.json')
@@ -809,14 +809,6 @@ function checkAddress(checkbox)
      
     }
 }
-
-
-
-
-
-
-
-
 
 
 function UncheckAll(){ 
