--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ path {
   <div class="navbar-fixed " style="position: absolute">
     <nav class="grey darken-4">
       <div class="nav-wrapper container">
-        <a href="#!" class="brand-logo" style="color:rgba(255,196,0,0.55); letter-spacing: -1px; font-family: 'Roboto Condensed', sans-serif; font-weight:700; font-size: 205%">SF CRIME <span style="font-weight:300; position:relative; left:-3px; color:rgba(255,196,0,0.9);">MAP</a>
+        <a href="#!" class="brand-logo" style="color:rgba(255,196,0,0.55); letter-spacing: -1px; font-family: 'Roboto Condensed', sans-serif; font-weight:700; font-size: 205%">SF <span style="font-weight:300; position:relative; left:-3px; color:rgba(255,196,0,0.9);">CRIME </span></a>
         <ul class="right hide-on-med-and-down">
           <li><a  data-target="modal1" class="modal-trigger">About</a></li>
         </ul>
